syntax = "proto3";

package cluster;

option go_package = "github.com/davidschrooten/open-atlas-search/internal/cluster;cluster";

service ClusterService {
  rpc JoinCluster (JoinRequest) returns (JoinResponse);
  rpc GetClusterState (StateRequest) returns (StateResponse);
  // Add more RPC methods as needed
}

// Request to join a new node to the cluster
message JoinRequest {
  string node_id = 1;
  string address = 2;
}

// Response for joining request
message JoinResponse {
  string message = 1;
}

// Request to get cluster state
message StateRequest {}

// Response containing cluster state
message StateResponse {
  repeated string node_ids = 1;
}
